--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,36 +2,47 @@
 
 
 <h1 class='create'><%= link_to(@post.user.name, @post.user) if @post.user %></h1>	
-<div class="userfont">
+
+
+
 
 <ul>
 
+<div class="userfont">
+   <div class="postview">
+
+		<li><%= image_tag(@post.user.avatar_url, :class => 'thumb') if @post.user %><li>
+
+		<hr>
+        
+		<li>Title: <%= @post.title %></li>
+       <div class="postbody">
+		<li> <%= raw(@post.body) %></li>
+	   </div>
+
+		<li><%= image_tag(@post.image, :class => 'xthumb') %></li>
+
+		<%= link_to'Edit |', edit_post_path %>
+		<%= link_to'Delete', @post, :method => :delete, :confirm => "Are you sure you want to delete this Post?" %></p>
+
+		<li> <%= link_to('Create a new Post', new_post_path) %></li>
+
+		<li><%= link_to " Back to post feed", posts_path %></li> 
+
+	   </div>
+
+   </div>
 
 
-<li><%= image_tag(@post.user.avatar_url, :class => 'thumb') %><li>
-
-<hr>
-
-<li>Title: <%= @post.title %></li>
-
-<li> Post: <%= raw(@post.body) %></li>
-
-<li><%= image_tag(@post.image, :class => 'xthumb') %></li>
-
-<%= link_to'Edit |', edit_post_path %>
-<%= link_to'Delete', @post, :method => :delete, :confirm => "Are you sure you want to delete this Post?" %></p>
-
-<li> <%= link_to('Create a new Post', new_post_path) %></li>
-
-<li><%= link_to " Back to post feed", posts_path %></li> 
-
- </div>
-
-
-<hr>
+		<hr>
 
 
 </ul>
+
+
+
+
+
 
 
 	
