--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,39 +1,43 @@
-<div class="user">
+<div class="background">
 
  <ul>
-  <div class="userfonts">
+  <div class="show">
 
    <%= form_for @post do |f| %>
     <% @post.errors.full_messages.each do |error| %>
       <li><%= error %></li>
       <% end %>
-   <li>
-      <%= f.label :user_id %>
+   
+     <p> <%= f.label :user_id %>
       <%= f.select :user_id, User.all.map{|user|[user.name, user.id]}, :include_blank => true %>
-   </li>
-
-   <li>
-     
+   
+     </p>
+   
+     <p>
       <%= f.label :title %>
       <%= f.text_field :title %>
-    </li>
-   <li>
-    <%=f.label :body %><br/>
-    <%=f.text_area :body %>
-   </li> 
+     </p>
+     <p>
+      <%=f.label :body %><br/>
+      <%=f.text_area :body %>
+     </p>
+   
 
-  <li>
+    <p>
      <%= f.label :image %>
     <%= f.text_field :image %>
+    </p>
    
-   </li>
+   
    
     <p> <%= f.submit %> </p>
 
     <% end %>
-
+  
   </div>
- </ul>
+ 
 </div>
+
+</ul>
 
 
